# ogre-package

./: .gitattributes  .gitignore  .gitmodules  .travis-single.yml  .travis.yml  README.md  appveyor.yml  docker-run  package  package.bat  version
cmake/: CMakeLists.txt
docker/: debian  fedora  ubuntu
