cmake_minimum_required (VERSION 3.10 FATAL_ERROR)

if(WIN32)
    message( FATAL_ERROR "You cannot run this script under Windows. Exiting." )
endif()

file(READ "../version" ver)
string(REGEX MATCH "VERSION_MAJOR=([0-9]*)" _ ${ver})
set(MAJOR_VERSION ${CMAKE_MATCH_1})
string(REGEX MATCH "VERSION_MINOR=([0-9]*)" _ ${ver})
set(MINOR_VERSION ${CMAKE_MATCH_1})
string(REGEX MATCH "VERSION_PATCH=([0-9]*)" _ ${ver})
set(PATCH_VERSION ${CMAKE_MATCH_1})

set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
set(CPACK_PACKAGE_NAME "ogre")
set(CPACK_PACKAGE_VENDOR "openhoi Team")
set(CPACK_PACKAGE_CONTACT "reiser.thomas@gmail.com")
set(CPACK_GENERATOR "DEB")
set(CPACK_SOURCE_GENERATOR "DEB")
set(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "openhoi Team")
set(CPACK_PACKAGE_DESCRIPTION "OGRE libraries for openhoi")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Contains all OGRE libraries required for openhoi")
set(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
set(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
set(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_DEBIAN_PACKAGE_LICENSE "mit")

include(CPack)

add_subdirectory(../ogre ogre)
