cmake_minimum_required (VERSION 3.10 FATAL_ERROR)

if(WIN32)
    message( FATAL_ERROR "You cannot run this script under Windows. Exiting." )
endif()

set(SPECIFIC_SYSTEM_PREFERED_CPACK_GENERATOR "TGZ")
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
	if(EXISTS "/etc/redhat-release")
		file(READ "/etc/redhat-release" LINUX_ISSUE)
	elseif(EXISTS "/etc/issue")
		file(READ "/etc/issue" LINUX_ISSUE)
	endif()
	if(LINUX_ISSUE MATCHES "Fedora")
		set(SPECIFIC_SYSTEM_PREFERED_CPACK_GENERATOR "RPM")
	elseif(LINUX_ISSUE MATCHES "DEbian")
		set(SPECIFIC_SYSTEM_PREFERED_CPACK_GENERATOR "DEB")
		elseif(LINUX_ISSUE MATCHES "Ubuntu")
		set(SPECIFIC_SYSTEM_PREFERED_CPACK_GENERATOR "DEB")
	endif()
endif()

file(READ "../version" ver)
string(REGEX MATCH "VERSION_MAJOR=([0-9]*)" _ ${ver})
set(MAJOR_VERSION ${CMAKE_MATCH_1})
string(REGEX MATCH "VERSION_MINOR=([0-9]*)" _ ${ver})
set(MINOR_VERSION ${CMAKE_MATCH_1})
string(REGEX MATCH "VERSION_PATCH=([0-9]*)" _ ${ver})
set(PATCH_VERSION ${CMAKE_MATCH_1})

set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
set(CPACK_PACKAGE_NAME "ogre")
set(CPACK_PACKAGE_VENDOR "openhoi Team")
set(CPACK_PACKAGE_CONTACT "reiser.thomas@gmail.com")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "openhoi Team")
set(CPACK_GENERATOR "${SPECIFIC_SYSTEM_PREFERED_CPACK_GENERATOR}")
set(CPACK_SOURCE_GENERATOR "${SPECIFIC_SYSTEM_PREFERED_CPACK_GENERATOR}")
set(CPACK_PACKAGE_DESCRIPTION "OGRE libraries for openhoi")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Contains all OGRE libraries required for openhoi")
set(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
set(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
set(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_DEBIAN_PACKAGE_LICENSE "mit")

include(CPack)

add_subdirectory(../ogre ogre)
